tests/neg-custom-args/captures/vars-simple.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars-simple.scala:15:9 -----------------------------------
15 |    a = (g: String => String)      // error
   |         ^^^^^^^^^^^^^^^^^^^
   |         Found:    String => String
   |         Required: box String ->{cap1, cap2} String
   |
   |         Note that String => String cannot be box-converted to box String ->{cap1, cap2} String
   |         since at least one of their capture sets contains the root capability `cap`
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/vars-simple.scala:16:8 --------------------------------------------------------
16 |    a = g  // error
   |        ^
   |        reference (cap3 : Cap) is not included in the allowed capture set {cap1, cap2}
   |        of an enclosing function literal with expected type box String ->{cap1, cap2} String
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars-simple.scala:17:12 ----------------------------------
17 |    b = List(g) // error
   |        ^^^^^^^
   |        Found:    List[box (x$0: String) ->{cap3} String]
   |        Required: List[box String ->{cap1, cap2} String]
   |
   | longer explanation available when compiling with `-explain`
